[gd_scene load_steps=10 format=3 uid="uid://0hda1be71iiq"]

[ext_resource type="Script" uid="uid://dumfc2x44khw" path="res://GDScripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://d0earjg3lblmr" path="res://Assets/Fonts/pixelmax/Pixelmax-Regular.otf" id="1_28flt"]
[ext_resource type="Texture2D" uid="uid://cpikebhbgg5d3" path="res://Assets/Sprites/mainmenu-rays.png" id="1_48xlc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_28flt"]
texture = ExtResource("1_48xlc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(0.3900625, 0.6848851, 0.3327297, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0.35109416, 0.61143124, 0.9184744, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n45e2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_opfnp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.5
offset_top = -325.0
offset_right = 577.5
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_28flt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -74.0
offset_right = 102.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9184133, 0.4917817, 0.24503782, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_styles/normal = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_n45e2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_opfnp")
text = "Start Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9184133, 0.4917817, 0.24503782, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_styles/normal = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_n45e2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_opfnp")
text = "Settings"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9184133, 0.4917817, 0.24503782, 1)
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_styles/normal = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_n45e2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_opfnp")
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
